--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
-    "react-toastify": "^10.0.5",
     "sass": "^1.72.0",
     "swiper": "^11.1.0"
   },
